; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/fddi/skfp/extr_drvfbi.c_driver_get_bia.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/fddi/skfp/extr_drvfbi.c_driver_get_bia.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.s_smc = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32* }
%struct.fddi_addr = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @driver_get_bia(%struct.s_smc* %0, %struct.fddi_addr* %1) #0 {
  %3 = alloca %struct.s_smc*, align 8
  %4 = alloca %struct.fddi_addr*, align 8
  %5 = alloca i32, align 4
  store %struct.s_smc* %0, %struct.s_smc** %3, align 8
  store %struct.fddi_addr* %1, %struct.fddi_addr** %4, align 8
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %26, %2
  %7 = load i32, i32* %5, align 4
  %8 = icmp slt i32 %7, 6
  br i1 %8, label %9, label %29

9:                                                ; preds = %6
  %10 = load %struct.s_smc*, %struct.s_smc** %3, align 8
  %11 = getelementptr inbounds %struct.s_smc, %struct.s_smc* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = load i32, i32* %5, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i32, i32* %14, i64 %16
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @bitrev8(i32 %18)
  %20 = load %struct.fddi_addr*, %struct.fddi_addr** %4, align 8
  %21 = getelementptr inbounds %struct.fddi_addr, %struct.fddi_addr* %20, i32 0, i32 0
  %22 = load i32*, i32** %21, align 8
  %23 = load i32, i32* %5, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i32, i32* %22, i64 %24
  store i32 %19, i32* %25, align 4
  br label %26

26:                                               ; preds = %9
  %27 = load i32, i32* %5, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %5, align 4
  br label %6

29:                                               ; preds = %6
  ret void
}

declare dso_local i32 @bitrev8(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
